# PETools

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  generate_ts_files.py  globaldata.cpp  globaldata.h  icon.rc  main.cpp  mythread.cpp  mythread.h  peloadworker.cpp  peloadworker.h  pewindow.cpp  pewindow.h  pewindow.ui  qbasiclabel.cpp  res.qrc  resource.h  taskMgr.cpp  taskMgr.h
GUI/: PEHeaderItemListWidget.cpp  PEHeaderItemListWidget.h  PEMainWindow.cpp  PEMainWindow.h  dataDirectoryWidget.cpp  dataDirectoryWidget.h  dllTree.cpp  dllTree.h  dosWidget.cpp  dosWidget.h  exportFunctionWidget.cpp  exportFunctionWidget.h  importTable.cpp  importTable.h  rvatofoawindow.cpp  rvatofoawindow.h  sectionTable.cpp  sectionTable.h
GUI/common/: baseTableView.cpp  baseTableView.h  baseWindow.cpp  baseWindow.h  hexlineedit.cpp  hexlineedit.h  hoverWindow.cpp  hoverWindow.h  itemPairListWidget.cpp  itemPairListWidget.h  qbasiclabel.h
GUI/constants/: constStrings.h
PEInfo/: PEInfo.cpp  PEInfo.h  PELinux.h
Util/: Util.cpp  Util.h
css/: exportFunctionWidget.css  mainwindow.css  rvaToFoaWindow.css
langs/: zh.qm  zh.ts
